fix spacing

--- a/frontend/src/app/features/book-flight/book-flight.component.scss
+++ b/frontend/src/app/features/book-flight/book-flight.component.scss
@@ -8,6 +8,7 @@
   grid-gap: 0.5rem;
   width: 50%;
   margin: 0 auto;
+  align-items: center;
 
   .firstHead {
     grid-area: firstHead;
@@ -57,6 +58,14 @@
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+  }
+
+  .input-gap {
+    margin-bottom: 1rem;
+  }
+
+  .dropdown-gap {
+    margin-bottom: 1.5rem;
   }
 
   .flex {
